--- a/63thERP/build.gradle
+++ b/63thERP/build.gradle
@@ -35,7 +35,10 @@ dependencies {
 	compile 'com.oracle:ojdbc6:11.2.0.3'
 	compileOnly 'org.projectlombok:lombok:1.18.12'
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
-	
+//============================= 2020.08.28 양지훈 수정 시작=============================
+//	description: add gson
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+//============================= 2020.08.28 양지훈 수정 종료=============================
 	compile group: 'com.auth0', name: 'java-jwt', version: '3.8.1'
 	compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.5'
 	compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
